--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 <input type="password" name="password" id="password">
             </div>
 
-            <div>
-                <button onclick="login()">Login</button>
-                <button onclick="getDashboard()">Get Dashboard</button>
-                <!-- <button onclick="getSettings()">Settings</button> -->
+            <div class="routes">
+                <button onclick="login()">Login </button>
+                <button onclick="getDashboard()" data-name="dashboard">Get Dashboard</button>
+                <button onclick="getSettings()" data-name="settings">Settings</button>
             </div>
         </main> 
 
@@ -49,7 +49,6 @@
                         const token = res.data.token;
                         localStorage.setItem('jwt', token);
                         getDashboard();
-                        // getSettings();
                     }
                 });
         }
@@ -68,18 +67,58 @@
             });
         }
         
-        // function getSettings() {
-        //     axios.get('/api/settings', {
-        //         headers: {
-        //             'Authorization': `Bearer ${token}`
-        //         }
-        //     }).then(res => {
-        //         if (res && res.data && res.data.success) {
-        //             document.querySelector('h1.row').innerHTML = 'Settings';
-        //             document.querySelector('main').innerHTML = res.data.myContent;
-        //         }
-        //     });
+        function getSettings() {
+            const token = localStorage.getItem('jwt');
+            axios.get('/api/settings', {
+                headers: {
+                    'Authorization': `Bearer ${token}`
+                }
+            }).then(res => {
+                if (res && res.data && res.data.success) {
+                    document.querySelector('h1.row').innerHTML = 'Settings';
+                    document.querySelector('main').innerHTML = res.data.myContent;
+                }
+            });
+        }
+
+        var container = document.querySelector('.routes');
+        container.addEventListener('click', function(e) {
+            if(e.target != e.currentTarget) {
+                e.preventDefault();
+                var data = e.target.getAttribute('data-name');
+                if (data != null) {
+                    url = "api/" + data;
+                }
+                else {
+                    url ="api/dashboard";
+                }
+                history.pushState(null, null, url);
+            }
+            e.stopPropagation();
+        }, false);
+
+        
+        // function requestContent(file) {
+        //     $('.container-fluid').load(file + ' .container-fluid');
         // }
+
+        // window.addEventListener('popstate', function(e) {
+        //     var character = e.state;
+        //     console.log(character);
+
+        //     if (character == null) {
+        //         removeCurrentClass();
+        //         textWrapper.innerHTML = " ";
+        //         content.innerHTML = " ";
+        //         document.title = defaultTitle;
+        //     } else {
+        //         updateText(character);
+        //         requestContent(character + ".html");
+        //         addCurrentClass(character);
+        //         document.title = character;
+        //     }
+        // });
+
     </script>
 
 
